--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		</dependency>
 
 	</dependencies>
-	
+
 	<reporting>
 		<plugins>
 			<!-- Normally, we take off the dependency report, saves time. -->
@@ -38,8 +38,31 @@
 					</formats>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</reporting>
-
+	
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <formats>
+                        <format>xml</format>
+                    </formats>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>cobertura</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+	
+	
 </project>
