added UTFS-8 to avoid warning in Maven POM

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,9 @@
 	<groupId>com.arjun.jenkins</groupId>
 	<artifactId>JenkinsDemo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -40,5 +42,5 @@
 			</plugin>
 		</plugins>
 	</reporting>
-	
+
 </project>
